syntax = "proto3";

import "com/sunya/electionguard/protogen/common.proto";

option java_package = "com.sunya.electionguard.protogen";
option java_outer_classname = "PlaintextTallyProto";

// Decrypted Tally of some collection of ballots.
message PlaintextTally {
  string object_id = 1;
  // Map(CONTEST_ID, PlaintextTallyContest)
  map<string, PlaintextTallyContest> contests = 2;
}

message PlaintextTallyContest {
  string object_id = 1;
  map<string, PlaintextTallySelection> selections = 2;
}

message PlaintextTallySelection {
  string object_id = 1;
  uint32 tally = 2;
  // g^tally or M in the spec.
  ElementModP value = 3;
  ElGamalCiphertext message = 4;
  repeated CiphertextDecryptionSelection shares = 5;
}

message CiphertextDecryptionSelection {
  string object_id = 1;

  // The Available Guardian that this share belongs to
  string guardian_id = 2;

  // The Share of the decryption of a selection. `M_i` in the spec.
  ElementModP share = 3;

  // The Proof that the share was decrypted correctly, if the guardian was available for decryption.
  ChaumPedersenProof proof = 4;

  // Map[GUARDIAN_ID, CiphertextCompensatedDecryptionSelection]
  map<string, CiphertextCompensatedDecryptionSelection> recovered_parts = 5;
}

message CiphertextCompensatedDecryptionSelection {
  string object_id = 1;

  // The Available Guardian that this share belongs to.
  string guardian_id = 2;

  // The Missing Guardian for whom this share is calculated on behalf of.
  string missing_guardian_id = 3;

  // The Share of the decryption of a selection. M_il in the spec.
  ElementModP share = 4;

  // The Recovery Public Key for the missing_guardian that corresponds to the available guardian's share of the secret.
  ElementModP recovery_key = 5;

  // The Proof that the share was decrypted correctly.
  ChaumPedersenProof proof = 6;
}